--- a/app/public/index.html
+++ b/app/public/index.html
@@ -36,6 +36,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAo03uEVYhfB3edmU9qkFJw5BIGLA2mGCc"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAo03uEVYhfB3edmU9qkFJw5BIGLA2mGCc"></script> -->
   </body>
 </html>
